# ft-ai-2-agent-communication

./: .gitignore  CONCEPTS.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  post-create.sh
apps/api/: .env.example  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_create_todos_table.py  002_create_users_and_auth_sessions.py
apps/api/src/area_todo_api/: __init__.py  config.py  db.py  dependencies.py  main.py
apps/api/src/area_todo_api/controllers/: auth.py  health.py  todos.py
apps/api/src/area_todo_api/models/: __init__.py  auth_session.py  todo.py  user.py
apps/api/src/area_todo_api/repositories/: auth_session_repository.py  todo_repository.py  user_repository.py
apps/api/src/area_todo_api/schemas/: auth.py  todo.py
apps/api/src/area_todo_api/security/: __init__.py  jwt.py  password.py
apps/api/src/area_todo_api/services/: auth_service.py  todo_service.py
apps/api/tests/: test_api.py  test_auth.py
apps/web/: .gitignore  .next  package.json
apps/web/app/: globals.css  layout.tsx
apps/web/features/location/: types.ts
memory-bank/: README.md  architecture.md  conventions.md  implementation-plan.md  product-context.md
memory-bank/decisions/: 2026-07-20-turborepo.md  2026-07-23-auth-mvp.md  README.md
memory-bank/rules/: README.md  backend.md  frontend.md  general.md  memory-bank.md  security.md
memory-bank/specs/: README.md
memory-bank/specs/backend/: README.md  auth.md  user.md
(+9 files in other folders)
