[project]
name = "area-todo-api"
version = "0.1.0"
description = "FastAPI backend for the Area Todo location-aware task app"
readme = "README.md"
authors = [
    { name = "Shane B.", email = "shane.bell.dev@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
